k8s/bases/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
    name: nginx
spec:
  type: ClusterIP
  ports:
    - name: nginx-port
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: nginx
